[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["lightserve*", "lightgest*"]

[project]
name = "lightserve"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "pydantic",
    "pydantic-settings",
    "sqlmodel",
    "numpy",
    "matplotlib",
    "pydantic_numpy",
    "psycopg_binary",
    "fastapi",
    "lightcurvedb @ git+https://github.com/simonsobs/lightcurvedb",
    "uvicorn",
    "psycopg",
    "astropy",
    "h5py",
    "loguru",
    "soauth"
]

[project.optional-dependencies]
dev = [
    "pytest",
    "ruff",
    "coverage",
    "pytest-cov",
    "pre-commit",
]

ephemeral = [
    "tqdm",
    "testcontainers",
]

[project.scripts]
lightserve-ephemeral = "lightserve.scripts.ephemeral:main"
lightgest-ephemeral = "lightgest.scripts.ephemeral:main"

[tool.ruff.lint]
extend-select = ["I"]

[tool.coverage.run]
source = [
    "lightserve",
]
